# django-twitter-clone

./: .env  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  pyproject.toml
src/apps/authentication/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
src/apps/authentication/migrations/: 0001_initial.py  0002_alter_user_first_name.py  0003_alter_user_first_name_alter_user_last_name_and_more.py
src/apps/authentication/templates/: authentication_base.html  login.html
src/apps/authentication/templates/components/: input.html
src/apps/authentication/templates/form/: login.html  register.html
src/apps/twitter_clone/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/apps/twitter_clone/domain/hashtag/: __init__.py  _save_hashtags.py
src/apps/twitter_clone/migrations/: 0001_initial.py  0002_hashtag.py  0003_alter_hashtag_name.py
src/apps/twitter_clone/templates/: index.html  nav.html
src/apps/twitter_clone/templates/components/: tweet.html
src/apps/twitter_clone/templates/pages/: hashtag.html  home.html
src/apps/twitter_clone/templatetags/: filters.py
src/project/: asgi.py  celery.py  urls.py  wsgi.py
src/project/settings/: _base.py  development.py  test.py
templates/: base.html
tests/functional/: login_decorator.py  test_create_tweet.py  test_hashtag_tweets.py  test_login.py  test_register.py
tests/unit/: test_filters.py  test_save_hashtags.py
