[tool.poetry]
name = "django-twitter-clone"
version = "0.1.0"
description = ""
authors = ["Pierre Bourdet <pbourdet@worldia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-environ = "^0.9.0"
psycopg2 = "^2.9.5"
pylint = "^2.15.8"
pylint-django = "^2.5.3"
black = "^22.12.0"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
